tests/cases/alloc_certificate/reject/closure_value.pr
fn make(x : Int) : (Int) -> Int without alloc = \(y) -> x + y
